Cards, most characters done
Backend almost complete ig ~70-80%(?)